syntax = "proto3";

package chat;

option go_package = "/proto/chatpb";

message Msg{
    string id = 1;
    string from_user_id = 2;
    string to_user_id = 3;
    string msg = 4;
    string date = 5;
}

message chatRequest{
    Msg req = 1;
}

message chatResponse{
    Msg res = 1;
}

service ChatService {
    rpc Send(chatRequest) returns (chatResponse) {};
}